static/main.css
html {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    height: 100%;
}

main {
    flex: 1 1 auto;
    height: 100%;
}

footer {
    flex: 0 1;
    text-align: center;
    font-size: small;
    margin-top: 11%;
}

footer > p {
    margin: 0;
}

